# cc_agent_sdk

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  SECURITY_AUDIT.md  TEST_GUIDE.md  docker-compose.yml  fix_integration_tests.py  fix_integration_tests_v2.py  pyproject.toml  requirements.txt  test_api_local.py  test_haiku.py
.claude/: settings.local.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
config/: .env.example
docs/: PLAN-agent-sdk-skills-migration.md  PLAN-frontend-web.md  PLAN-pdf-skill-migration.md  PRD-CV-Cybersecurity-Analyzer.md  prompt_skill_ciber_cv.md
specs/001-cv-cybersecurity-analyzer-api/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  tasks.md.backup
specs/001-cv-cybersecurity-analyzer-api/checklists/: requirements.md
specs/001-cv-cybersecurity-analyzer-api/contracts/: openapi.yaml
src/: main.py
src/api/: analyze.py  health.py
src/core/: config.py  logging.py  retry.py
src/models/: __init__.py  candidate.py  improvement.py  metadata.py  pdf_content.py  recommendations.py  redflag.py  request.py  response.py  scores.py  strength.py
src/services/: api_auth.py  pdf_extractor.py
src/services/agent/: cv_analyzer_agent.py  standalone_agent.py
static/: README.md  index.html
static/css/: styles.css
static/js/: app.js
tests/: conftest.py
tests/fixtures/sample_cvs/: test_cybersecurity_cv.txt
tests/integration/: test_analyze_contract.py  test_cv_analysis_e2e.py  test_health_performance.py  test_improvement_areas.py  test_role_recommendations.py
tests/unit/: test_api_auth.py  test_health.py  test_pdf_extractor.py  test_recommendations.py  test_red_flag_detection.py  test_retry.py
